Fix margin
Plus add space at bottom so scrolling isn't cut off.

--- a/css/main.css
+++ b/css/main.css
@@ -298,7 +298,7 @@ body {
   display: inline-block;
   width: 80%;
   max-width: 550px;
-  margin: 3em 2em 0 2em;
+  margin: 2em 2em 3.5em 2em;
 
   line-height: 1.6;
   font-size: 2em;
